--- a/user-test/index.html
+++ b/user-test/index.html
@@ -13,8 +13,12 @@
     
             <div class="control-row">
                 <div class="flex-control">
-                    <label for="bgcolor">BGColor: </label>
+                    <label for="bgcolor">BG Color: </label>
                     <input type="color" name="bgcolor" class="color-input" id="bgcolor" value="#ffffff">
+                </div>
+                <div class="flex-control">
+                    <label for="bgopacity">Bg Opacity: </label>
+                    <input type="number" id="bgopacity" class="number-input" value="1" min="0" max="1" step="0.02">
                 </div>
             </div>
     
