--- a/user-test/index.html
+++ b/user-test/index.html
@@ -20,6 +20,13 @@
                     <label for="bgopacity">Bg Opacity: </label>
                     <input type="number" id="bgopacity" class="number-input" value="1" min="0" max="1" step="0.02">
                 </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="enableTitle">Title</label>
+                        <input type="checkbox" name="enableTitle" id="enableTitle">
+                    </div>
+                    <input type="text" id="title" class="text-input">
+                </div>
             </div>
     
         </header>
