--- a/user-test/index.html
+++ b/user-test/index.html
@@ -23,9 +23,11 @@
                 <div class="flex-control">
                     <div>
                         <label for="enableTitle">Title</label>
-                        <input type="checkbox" name="enableTitle" id="enableTitle">
+                        <input type="checkbox" name="enableTitle" id="enableTitle" class="titleObj">
+                        <label for="fillTitle">fill</label>
+                        <input type="checkbox" name="fillTitle" id="fillTitle" class="titleObj" checked>
                     </div>
-                    <input type="text" id="title" class="text-input">
+                    <input type="text" id="title" class="titleObj text-input">
                 </div>
             </div>
     
