--- a/user-test/index.html
+++ b/user-test/index.html
@@ -186,6 +186,16 @@
                     <input type="range" class="range-input" id="axisOpacity" value="1" min="0" max="1" step="0.05">
                 </div>
 
+                <div  class="flex-control">
+                    <div>
+                        <label for="xUnits">X Units:</label>
+                        <input type="text" name="xUnits" id="xUnits" class="text-input">
+                    </div>
+                    <div>
+                        <label for="yUnits">Y Units:</label>
+                        <input type="text" name="yUnits" id="yUnits" class="text-input">
+                    </div>
+                </div>
 
 
 
