--- a/user-test/index.html
+++ b/user-test/index.html
@@ -189,14 +189,10 @@
                     <div>
                         <label for="xUnits">X Units:</label>
                         <input type="text" name="xUnits" id="xUnits" class="text-input">
-                        <label for="xUnitFill">Fill</label>
-                        <input type="checkbox" name="xUnitFilll" id="xUnitFill" checked>
                     </div>
                     <div>
                         <label for="yUnits">Y Units:</label>
                         <input type="text" name="yUnits" id="yUnits" class="text-input">
-                        <label for="yUnitFill">Fill</label>
-                        <input type="checkbox" name="yUnitFill" id="yUnitFill" checked>
                     </div>
                 </div>
                 <div class="flex-control">
@@ -251,6 +247,26 @@
                     <div>
                         <label for="yTextSize">Y Text Size</label>
                         <input type="number" class="number-input" name="yTextSize" id="yTextSize" min="0" step="1" value="10">
+                    </div>
+                </div>
+                <div class="flex-input">
+                    <div>
+                        <label for="xDynamic">X Dynamic</label>
+                        <input type="checkbox" name="xDynamic" id="xDynamic" checked>
+                    </div>
+                    <div>
+                        <label for="yDynamic">Y Dynamic</label>
+                        <input type="checkbox" name="yDynamic" id="yDynamic" checked>
+                    </div>
+                </div>
+                <div class="flex-input">
+                    <div>
+                        <label for="xContained">X Contained</label>
+                        <input type="checkbox" name="xContained" id="xContained" checked>
+                    </div>
+                    <div>
+                        <label for="yContained">Y Contained</label>
+                        <input type="checkbox" name="yContained" id="yContained" checked>
                     </div>
                 </div>
 
