--- a/user-test/index.html
+++ b/user-test/index.html
@@ -269,7 +269,52 @@
                         <input type="checkbox" name="yContained" id="yContained" checked>
                     </div>
                 </div>
+                <div class="flex-input">
+                    <div>
+                        <label for="marginStart">Margin Start</label>
+                        <input type="number" name="marginStart" id="marginStart" class="number-input" min="0" step="1" value="5">
+                    </div>
+                    <div>
+                        <label for="marginEnd">Margin End</label>
+                        <input type="number" name="marginEnd" id="marginEnd" class="number-input" min="0" step="1" value="5">
+                    </div>
+                </div>
+                <div class="flex-input">
+                    <div>
+                        <label for="marginTop">Margin Top</label>
+                        <input type="number" name="marginTop" id="marginTop" class="number-input" min="0" step="1" value="5">
+                    </div>
+                    <div>
+                        <label for="marginBottom">Margin Bottom</label>
+                        <input type="number" name="marginBottom" id="marginBottom" class="number-input" min="0" step="1" value="5">
+                    </div>
+                </div>
+                <div class="flex-input">
+                    <div>
+                        <label for="xTicks">X Ticks (auto = -1)</label>
+                        <input type="number" name="xTicks" id="xTicks" class="number-input" min="-1" step="1" value="-1">
+                    </div>
+                    <div>
+                        <label for="yTicks">Y Ticks (auto = -1)</label>
+                        <input type="number" name="yTicks" id="yTicks" class="number-input" min="-1" step="1" value="-1">
+                    </div>
+                </div>
 
+
+            </div>
+
+            <div class="control-row">
+
+                <div class="flex-input">
+                    <div>
+                        <label for="xSpacing">X Min Spacing</label>
+                        <input type="number" class="number-input" name="xSpacing" id="xSpacing" min="5" step="1" value="45">
+                    </div>
+                    <div>
+                        <label for="ySpacing">Y Min Spacing</label>
+                        <input type="number" class="number-input" name="ySpacing" id="ySpacing" min="5" step="1" value="45">
+                    </div>
+                </div>
 
 
             </div>
