--- a/user-test/index.html
+++ b/user-test/index.html
@@ -250,7 +250,7 @@
                             <option value="Georgia, Times, Times New Roman, serif">Times Roman</option>
                     </select>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="xTextSize">X Text Size</label>
                         <input type="number" class="number-input" name="xTextSize" id="xTextSize" min="0" step="1" value="10">
@@ -260,7 +260,7 @@
                         <input type="number" class="number-input" name="yTextSize" id="yTextSize" min="0" step="1" value="10">
                     </div>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="xDynamic">X Dynamic</label>
                         <input type="checkbox" name="xDynamic" id="xDynamic" checked>
@@ -270,7 +270,7 @@
                         <input type="checkbox" name="yDynamic" id="yDynamic" checked>
                     </div>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="xContained">X Contained</label>
                         <input type="checkbox" name="xContained" id="xContained" checked>
@@ -280,7 +280,7 @@
                         <input type="checkbox" name="yContained" id="yContained" checked>
                     </div>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="marginStart">Margin Start</label>
                         <input type="number" name="marginStart" id="marginStart" class="number-input" min="0" step="1" value="5">
@@ -290,7 +290,7 @@
                         <input type="number" name="marginEnd" id="marginEnd" class="number-input" min="0" step="1" value="5">
                     </div>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="marginTop">Margin Top</label>
                         <input type="number" name="marginTop" id="marginTop" class="number-input" min="0" step="1" value="5">
@@ -307,7 +307,7 @@
 
             <div class="control-row">
 
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="xTicks">X Ticks (auto = -1)</label>
                         <input type="number" name="xTicks" id="xTicks" class="number-input" min="-1" step="1" value="-1">
@@ -317,7 +317,7 @@
                         <input type="number" name="yTicks" id="yTicks" class="number-input" min="-1" step="1" value="-1">
                     </div>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <label for="xSpacing">X Min Spacing</label>
                         <input type="number" class="number-input" name="xSpacing" id="xSpacing" min="5" step="1" value="45">
@@ -327,7 +327,7 @@
                         <input type="number" class="number-input" name="ySpacing" id="ySpacing" min="5" step="1" value="45">
                     </div>
                 </div>
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <span>Axis Overlap: </span>
                         <label for="xOverlap">X:</label>
@@ -344,7 +344,7 @@
                     </div>
                 </div>
 
-                <div class="flex-input">
+                <div class="flex-control">
                     <div>
                         <span>Primary Grid</span>
                         <label for="xPrimaryGrid">X:</label>
@@ -359,6 +359,21 @@
                         <label for="ySecondaryGrid">Y:</label>
                         <input type="checkbox" name="ySecondaryGrid" id="ySecondaryGrid" checked>
                     </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="gridColorTarget">Grid Color: </label>
+                        <select name="gridColorTarget" id="gridColorTarget" value="all" class="option-input">
+                            <option value="all">All</option>
+                            <option value="primary">Primary</option>
+                            <option value="secondary">Secondary</option>
+                            <option value="xPrimary">X Primary</option>
+                            <option value="yPrimary">Y Primary</option>
+                            <option value="xSecondary">X Secondary</option>
+                            <option value="ySecondary">Y Secondary</option>
+                        </select>
+                    </div>
+                    <input type="color" id="gridColor" value="#000000" class="color-input">
                 </div>
 
             </div>
