--- a/user-test/index.html
+++ b/user-test/index.html
@@ -424,7 +424,36 @@
                     </div>
                     
                 </div>
-
+                <div class="flex-control">
+                    <div>
+                        <label for="enableSecondaryX">Secondary Axis X</label>
+                        <input type="checkbox" name="enableSecondaryX" id="enableSecondaryX">
+                    </div>
+                    <div>
+                        <label for="enableSecondaryY">Secondary Axis Y</label>
+                        <input type="checkbox" name="enableSecondaryY" id="enableSecondaryY">
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="secondaryXStart">x start:</label>
+                        <input type="number" class="number-input" name="secondaryXStart" id="secondaryXStart" value="-5" step="0.1">
+                    </div>
+                    <div>
+                        <label for="secondaryXEnd">x end:</label>
+                        <input type="number" class="number-input" name="secondaryXEnd" id="secondaryXEnd" value="5" step="0.1">
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="secondaryYStart">y start:</label>
+                        <input type="number" class="number-input" name="secondaryYStart" id="secondaryYStart" value="-5" step="0.1">
+                    </div>
+                    <div>
+                        <label for="secondaryYEnd">y end:</label>
+                        <input type="number" class="number-input" name="secondaryYEnd" id="secondaryYEnd" value="5" step="0.1">
+                    </div>
+                </div>
 
 
             </div>
