--- a/user-test/index.html
+++ b/user-test/index.html
@@ -556,6 +556,26 @@
                         <input type="number" class="number-input" name="secondaryYTextSize" id="secondaryYTextSize" min="0" step="1" value="10">
                     </div>
                 </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="secondaryXTicks">X Ticks (auto = -1)</label>
+                        <input type="number" name="secondaryXTicks" id="secondaryXTicks" class="number-input" min="-1" step="1" value="-1">
+                    </div>
+                    <div>
+                        <label for="secondaryYTicks">Y Ticks (auto = -1)</label>
+                        <input type="number" name="secondaryYTicks" id="secondaryYTicks" class="number-input" min="-1" step="1" value="-1">
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="secondaryXSpacing">X Min Spacing</label>
+                        <input type="number" class="number-input" name="secondaryXSpacing" id="secondaryXSpacing" min="5" step="1" value="45">
+                    </div>
+                    <div>
+                        <label for="secondaryYSpacing">Y Min Spacing</label>
+                        <input type="number" class="number-input" name="secondaryYSpacing" id="secondaryYSpacing" min="5" step="1" value="45">
+                    </div>
+                </div>
 
 
 
