--- a/user-test/index.html
+++ b/user-test/index.html
@@ -387,7 +387,7 @@
                         <label for="gridColor">Color: </label>
                         <input type="color" name="gridColor" id="gridColor" value="#000000" class="color-input">
                         <label for="polarGrid">Polar:</label>
-                        <input type="number" name="polarGrid" id="polarGrid" class="number-input" min="0" step="1">
+                        <input type="number" name="polarGrid" id="polarGrid" class="number-input" min="0" step="1" value="16">
                     </div>
                 </div>
                 <div class="flex-control">
