--- a/user-test/index.html
+++ b/user-test/index.html
@@ -588,7 +588,20 @@
                         <input type="number" class="number-input" name="secondaryYSpacing" id="secondaryYSpacing" min="5" step="1" value="45">
                     </div>
                 </div>
-
+                <div class="flex-control">
+                    <label for="secondaryXAxisType">X Axis Type</label>
+                    <select name="secondaryXAxisType" id="secondaryXAxisType" value="rectangular">
+                        <option value="rectangular">Rectangular</option>
+                        <option value="log">Log</option>
+                    </select>
+                </div>
+                <div class="flex-control">
+                    <label for="secondaryYAxisType">Y Axis Type</label>
+                    <select name="secondaryYAxisType" id="secondaryYAxisType" value="rectangular">
+                        <option value="rectangular">Rectangular</option>
+                        <option value="log">Log</option>
+                    </select>
+                </div>
 
 
             </div>
