--- a/user-test/index.html
+++ b/user-test/index.html
@@ -602,6 +602,86 @@
                         <option value="log">Log</option>
                     </select>
                 </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="aspectRatio">Aspect Ratio</label>
+                        <input type="number" name="aspectRatio" id="aspectRatio" class="number-input" step="0.1" value="1">
+                    </div>
+                    <div>
+                        <label for="anchor">Anchor</label>
+                        <input type="number" value="0" name="anchor" id="anchor" class="number-input" step="0.1">
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <span>Apply on:</span>
+                        <label for="xAspectRatio">X</label>
+                        <input type="radio" name="axisAspectRatio" id="xAspectRatio">
+                        <label for="yAspectRatio">Y</label>
+                        <input type="radio" name="axisAspectRatio" id="yAspectRatio" checked>
+                    </div>
+                    <button type="button" id="applyAspectRatio">Apply Aspect Ratio</button>
+                </div>
+
+
+            </div>
+
+            <div class="control-row">
+
+                <div class="flex-control">
+                    <div>
+                        <label for="pointerMove">Pointer Move:</label>
+                        <input type="checkbox" name="pointerMove" id="pointerMove" checked>
+                    </div>
+                    <div>
+                        <label for="pointerCapture">Capture:</label>
+                        <input type="checkbox" name="pointerCapture" id="pointerCapture" checked>
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="defaultCursor">Pointer default</label>
+                        <select name="defaultCursor" id="defaultCursor" value="default">
+                            <option value="default">Auto</option>
+                            <option value="pointer">Pointer</option>
+                            <option value="cell">Cell</option>
+                            <option value="crosshair">Crosshair</option>
+                            <option value="move">Move</option>
+                            <option value="grab">Grab</option>
+                            <option value="grabbing">Grabbing</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="pointerDelay">Delay:</label>
+                        <input type="number" class="number-input" name="pointerDelay" id="pointerDelay" min="0" step="1" value="15">
+                    </div>
+                </div>
+                <div class="flex-control">
+                    <div>
+                        <label for="hoverCursor">Pointer hover</label>
+                        <select name="hoverCursor" id="hoverCursor" value="grab">
+                            <option value="grab">Grab</option>
+                            <option value="default">Auto</option>
+                            <option value="pointer">Pointer</option>
+                            <option value="cell">Cell</option>
+                            <option value="crosshair">Crosshair</option>
+                            <option value="move">Move</option>
+                            <option value="grabbing">Grabbing</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="moveCursor">Pointer Move</label>
+                        <select name="moveCursor" id="moveCursor" value="grabbing">
+                            <option value="grabbing">Grabbing</option>
+                            <option value="default">Auto</option>
+                            <option value="pointer">Pointer</option>
+                            <option value="cell">Cell</option>
+                            <option value="crosshair">Crosshair</option>
+                            <option value="move">Move</option>
+                            <option value="grab">Grab</option>
+                        </select>
+                    </div>
+                </div>
 
 
             </div>
